--- a/src/components/UrlForm.css
+++ b/src/components/UrlForm.css
@@ -1,12 +1,13 @@
 .urlForm {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     padding: 0.5em 1em;
     border: solid black 1px;
+    width: 25em;
 }
 
 .urlForm__input {
-    width: 25em;
     font-size: 1.5em;
     padding: 0 0.2em;
 }
@@ -23,4 +24,10 @@
 
 .urlForm__button--submit {
     font-weight: bold;
+}
+
+@media (max-width: 750px) {
+    .urlForm {
+        width: calc(100vw - 5em);
+    }
 }
